--- a/views/css/style.scss
+++ b/views/css/style.scss
@@ -744,6 +744,12 @@ nav {
       margin-right: 10px;
     }
 
+    .comment-author {
+      color: $fg;
+      font-size: medium;
+      font-weight: bold;
+    }
+
     .stamp {
       width: 96px;
       height: 96px;
