--- a/views/css/style.scss
+++ b/views/css/style.scss
@@ -674,8 +674,14 @@ nav {
 .illust-attr {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   margin-top: 10px;
   margin-bottom: 10px;
+
+  .illust-author-attr {
+    display: flex;
+    align-items: center;
+  }
 
   .illust-avatar {
     width: 62px;
@@ -698,6 +704,14 @@ nav {
 
     a {
       color: $fg-secondary;
+    }
+  }
+
+  .artwork-actions {
+    img {
+      aspect-ratio: 1/1;
+      width: 30px;
+      height: 30px;
     }
   }
 }
@@ -948,43 +962,42 @@ nav {
 
 // Font settings for novels
 
-$font-fallback-serif:
-"Yu Mincho",
-YuMincho,
-"Hiragino Mincho ProN",
-"Hiragino Mincho Pro",
-"Source Han Serif",
-"BIZ UDMincho Medium",
-"Source Serif Pro",
-"Source Serif",
-"Noto Serif",
-"Times New Roman",
-"Georgia Pro",
-Georgia,
-Simsun,
-PMingLiu,
-AppleMyungjo,
-"Source Han Serif K",
-"Source Han Serif KR",
-"Noto Serif KR",
-Batang,
-serif;
+$font-fallback-serif: "Yu Mincho",
+  YuMincho,
+  "Hiragino Mincho ProN",
+  "Hiragino Mincho Pro",
+  "Source Han Serif",
+  "BIZ UDMincho Medium",
+  "Source Serif Pro",
+  "Source Serif",
+  "Noto Serif",
+  "Times New Roman",
+  "Georgia Pro",
+  Georgia,
+  Simsun,
+  PMingLiu,
+  AppleMyungjo,
+  "Source Han Serif K",
+  "Source Han Serif KR",
+  "Noto Serif KR",
+  Batang,
+  serif;
 
 [data-font=mincho][data-font=jp] {
-  font-family: 
-"Source Han Serif JP",
-"Noto Serif JP",
-  $font-fallback-serif;
+  font-family:
+    "Source Han Serif JP",
+    "Noto Serif JP",
+    $font-fallback-serif;
 }
 
 [data-font=mincho][data-font=zh-cn],
 [data-font=mincho][data-font=zh-hans] {
   font-family:
-"Songti SC",
-"Source Han Serif SC",
-"Noto Serif SC",
-"Source Han Serif CN",
-  $font-fallback-serif;
+    "Songti SC",
+    "Source Han Serif SC",
+    "Noto Serif SC",
+    "Source Han Serif CN",
+    $font-fallback-serif;
 }
 
 // todo: technically, zh-hk > zh-hant > zh
@@ -998,53 +1011,52 @@ serif;
 [data-font=mincho][data-font=zh-tw],
 [data-font=mincho][data-font=zh-hk],
 [data-font=mincho][data-font=zh-hant] {
-  font-family: 
-"Songti TC",
-"Source Han Serif TC",
-"Noto Serif TC",  
-"Source Han Serif TW",
-"Source Han Serif HK",
-  $font-fallback-serif;
+  font-family:
+    "Songti TC",
+    "Source Han Serif TC",
+    "Noto Serif TC",
+    "Source Han Serif TW",
+    "Source Han Serif HK",
+    $font-fallback-serif;
 }
 
 [data-font=mincho] {
   font-family: $font-fallback-serif;
 }
 
-$font-fallback-sans:
-YuGothic,
-"Hiragino Kaku Gothic Pro",
-Meiryo,
-"Source Han Sans",
-"Source Han Sans JP",
-"Noto Sans CJK JP",
-"Avenir Next",
-Avenir,
-"Source Sans",
-"Noto Sans",
-Roboto,
-Verdana,
-"Pingfang TC",
-"Pingfang HK",
-"Hiragino Sans CNS",
-"Lantinghei TC",
-"Source Han Sans TW",
-"Source Han Sans HK",
-"Noto Sans CJK TC",
-"Microsoft JhengHei",
-"Pingfang SC",
-"Hiragino Sans GB",
-"Lantinghei SC",
-"Source Han Sans CN",
-"Noto Sans CJK SC",
-"Microsoft Yahei",
-DengXian,
-"Apple SD Gothic Neo",
-"Source Han Sans K",
-"Source Han Sans KR",
-"Noto Sans CJK KR",
-"Malgun Gothic",
-sans-serif;
+$font-fallback-sans: YuGothic,
+  "Hiragino Kaku Gothic Pro",
+  Meiryo,
+  "Source Han Sans",
+  "Source Han Sans JP",
+  "Noto Sans CJK JP",
+  "Avenir Next",
+  Avenir,
+  "Source Sans",
+  "Noto Sans",
+  Roboto,
+  Verdana,
+  "Pingfang TC",
+  "Pingfang HK",
+  "Hiragino Sans CNS",
+  "Lantinghei TC",
+  "Source Han Sans TW",
+  "Source Han Sans HK",
+  "Noto Sans CJK TC",
+  "Microsoft JhengHei",
+  "Pingfang SC",
+  "Hiragino Sans GB",
+  "Lantinghei SC",
+  "Source Han Sans CN",
+  "Noto Sans CJK SC",
+  "Microsoft Yahei",
+  DengXian,
+  "Apple SD Gothic Neo",
+  "Source Han Sans K",
+  "Source Han Sans KR",
+  "Noto Sans CJK KR",
+  "Malgun Gothic",
+  sans-serif;
 
 [data-font=gothic] {
   font-family: $font-fallback-sans;
