--- a/views/pages/components/artwork.jet.html
+++ b/views/pages/components/artwork.jet.html
@@ -45,7 +45,7 @@
     </a>
     {{ end }}
 
-    {{ if ! .Liked }}
+    {{ if .Liked }}
     <img src="/assets/like-blue.png" alt="Liked" />
 
     {{ else }}
@@ -61,20 +61,6 @@
   <br />
 </div>
 <div class="illust-tags">
-  {*
-  To know if this artwork is bookmarked:
-  ```
-  {{ if .Bookmarked }}
-  <button>Unbookmark</button>
-  //...
-  {{ else }}
-  <button>Bookmarked</button>
-  //...
-  {{ end }}
-  ```
-
-  Same with .Liked
-  *}
   <span class="illust-tag-attr">
     <img src="/assets/eye.png" alt="Views" />
     {{ .Views }}
