--- a/views/pages/settings.jet.html
+++ b/views/pages/settings.jet.html
@@ -22,7 +22,7 @@
     <input type="submit" value="Reset all" />
   </form>
   <hr />
-  <h3>Login</h3>
+  <h3 id="login">Login</h3>
   <p>Supported features (for now):</p>
   <ul>
     <li>Discovery page</li>
@@ -31,9 +31,7 @@
   <p>
     Log in with your account's cookie to access the Discovery and Landing pages.
     To learn how to obtain your cookie, please see
-    <a href="https://pixivfe.pages.dev/obtaining-pixivfe-token/"
-      >the guide on obtaining your PixivFE token</a
-    >.
+    <a href="https://pixivfe.pages.dev/obtaining-pixivfe-token/">the guide on obtaining your PixivFE token</a>.
   </p>
   <p>
     Keep in mind that logins will expire whenever the server is updated, so you
@@ -41,10 +39,7 @@
   </p>
   <form action="/settings/token" method="post">
     <input type="text" name="token" autocomplete="off" />
-    <input
-      type="submit"
-      value="Remeber account cookie (until next server restart)"
-    />
+    <input type="submit" value="Remeber account cookie (until next server restart)" />
   </form>
   <hr />
   <h3>Logout</h3>
@@ -81,13 +76,7 @@
     <form action="/settings/imageServer" method="post">
       <label for="image-proxy">
         Custom image proxy server
-        <input
-          type="text"
-          name="image-proxy"
-          required="true"
-          placeholder="https://example.com"
-          autocomplete="off"
-        />
+        <input type="text" name="image-proxy" required="true" placeholder="https://example.com" autocomplete="off" />
       </label>
       <input type="submit" value="Use custom proxy" />
     </form>
