--- a/views/pages/components/artwork.jet.html
+++ b/views/pages/components/artwork.jet.html
@@ -35,7 +35,7 @@
     </div>
   </div>
   <div class="artwork-actions">
-    {{ if isset(.BookmarkData) }}
+    {{ if isset(.BookmarkData) && LoggedIn }}
     <a href="/self/deleteBookmark/{{ .BookmarkID }}?r={{ OriginalURL }}">
       <img src="/assets/heart-red.png" alt="Bookmarked" />
     </a>
@@ -45,7 +45,7 @@
     </a>
     {{ end }}
 
-    {{ if .Liked }}
+    {{ if .Liked && LoggedIn}}
     <img src="/assets/like-blue.png" alt="Liked" />
 
     {{ else }}
