--- a/views/css/style.scss
+++ b/views/css/style.scss
@@ -912,14 +912,21 @@ nav {
 
   .novel-content {
     margin: 1.2rem 0;
-    line-height: 1.8;
+    line-height: 2;
     color: black;
     background-color: white;
     max-width: 100%;
     width: 100%;
+    overflow-x: scroll;
 
     .novel-content-text {
       padding: 6.4rem 10rem;
+      text-align: justify;
+
+      img {
+        max-height: 100%;
+        margin: 0 0.5rem;
+      }
     }
   }
 
