--- a/views/css/style.css
+++ b/views/css/style.css
@@ -789,6 +789,7 @@ nav .sidebar-item img {
   text-align: justify;
 }
 .novel .novel-content .novel-content-text img {
+  max-width: 100%;
   max-height: 100%;
   margin: 0 0.5rem;
 }
@@ -812,7 +813,7 @@ nav .sidebar-item img {
   display: none;
   position: absolute;
   background-color: #131516;
-  min-width: 160px;
+  min-width: 100px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
   z-index: 1;
   padding: 1rem;
