--- a/views/css/style.scss
+++ b/views/css/style.scss
@@ -924,6 +924,7 @@ nav {
       text-align: justify;
 
       img {
+        max-width: 100%;
         max-height: 100%;
         margin: 0 0.5rem;
       }
@@ -952,7 +953,7 @@ nav {
       display: none;
       position: absolute;
       background-color: $bg;
-      min-width: 160px;
+      min-width: 100px;
       box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
       z-index: 1;
       padding: 1rem;
