/about/: describe pixivfe

--- a/views/pages/about.jet.html
+++ b/views/pages/about.jet.html
@@ -1,5 +1,8 @@
 <div class="container">
-  <h1>Server information</h1>
+  <h1>About PixivFE</h1>
+  <p>PixivFE is a Pixiv frontend. It lets you enjoy art on Pixiv without needless interruption.</p>
+  <p>The instance you are looking at is provided by the owner of this domain. If you want to host PixivFE yourself, check out <a href="https://codeberg.org/vnpower/pixivfe">the source repository</a>.</p>
+  <h2>Server information</h2>
   <ul>
     <li>
       <b>Version:</b> {{ Version }}<br />PixivFE's version this server is
@@ -19,5 +22,4 @@
       Accept-Language header this server uses to request to Pixiv's APIs.
     </li>
   </ul>
-  <p></p>
 </div>
