--- a/views/css/style.scss
+++ b/views/css/style.scss
@@ -83,7 +83,7 @@ edit style.scss
   /* Make images easier to work with */
   img,
   picture {
-    max-width: 100%;
+    // max-width: 100%;
     display: block;
   }
 
