--- a/views/css/style.css
+++ b/views/css/style.css
@@ -115,6 +115,30 @@ h1, h2, h3, h4, h5, h6 {
   margin-block-end: 0.5em;
 }
 
+h1 {
+  font-size: 1.5em;
+}
+
+h2 {
+  font-size: 1.17em;
+}
+
+h3 {
+  font-size: 1em;
+}
+
+h4 {
+  font-size: 0.83em;
+}
+
+h5 {
+  font-size: 0.67em;
+}
+
+h6 {
+  font-size: 0.5em;
+}
+
 a {
   color: #118bee;
   text-decoration: none;
