--- a/views/css/style.scss
+++ b/views/css/style.scss
@@ -152,6 +152,13 @@ h1,h2,h3,h4,h5,h6 {
   margin-block-end: 0.5em;
 }
 
+h1 { font-size: 1.5em; }
+h2 { font-size: 1.17em; }
+h3 { font-size: 1em; }
+h4 { font-size: 0.83em; }
+h5 { font-size: 0.67em; }
+h6 { font-size: 0.50em; }
+
 a {
   color: $link;
   text-decoration: none;
