--- a/views/pages/settings.jet.html
+++ b/views/pages/settings.jet.html
@@ -3,14 +3,14 @@
   <p>
     PixivFE uses <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Cookies">cookies</a> to store your preferences, which you can change on this page.
   </p>
-  <p>
-    Please note that some cookies here such as NovelFontType, ShowArtR18,
-    ShowArtR18G, and ShowArtAI are for features still under development.
-  </p>
   <details>
     <summary>
       <h2>Current Cookie Values</h2>
     </summary>
+    <div>
+      Please note that some cookies here such as NovelFontType, ShowArtR18,
+      ShowArtR18G, and ShowArtAI are for features still under development.
+    </div>
     <p>
       {{ range CookieList }}
       <div class="settings-set-cookie">
