--- a/views/css/style.scss
+++ b/views/css/style.scss
@@ -42,9 +42,12 @@ edit style.scss
   }
 
   /* Fix list style to not indent */
-  ul, ol, menu {
+  ul,
+  ol,
+  menu {
     padding-inline-start: 1.5em;
   }
+
   li {
     padding-inline-start: 0.25em;
   }
@@ -148,16 +151,38 @@ main {
   }
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-block-end: 0.5em;
 }
 
-h1 { font-size: 1.5em; }
-h2 { font-size: 1.17em; }
-h3 { font-size: 1em; }
-h4 { font-size: 0.83em; }
-h5 { font-size: 0.67em; }
-h6 { font-size: 0.50em; }
+h1 {
+  font-size: 1.5em;
+}
+
+h2 {
+  font-size: 1.17em;
+}
+
+h3 {
+  font-size: 1em;
+}
+
+h4 {
+  font-size: 0.83em;
+}
+
+h5 {
+  font-size: 0.67em;
+}
+
+h6 {
+  font-size: 0.50em;
+}
 
 a {
   color: $link;
@@ -831,6 +856,7 @@ nav {
       aspect-ratio: 1/1;
       width: 30px;
       height: 30px;
+      display: inline;
     }
   }
 }
@@ -1253,7 +1279,12 @@ $font-fallback-sans: YuGothic,
 }
 
 .user {
+
   transform: translateY(-8rem);
+
+  img {
+    display: inline;
+  }
 
   .user-avatar {
     text-align: center;
@@ -1411,20 +1442,24 @@ $font-fallback-sans: YuGothic,
   }
 }
 
-summary > :is(h1,h2,h3,h4,h5,h6) {
+summary> :is(h1, h2, h3, h4, h5, h6) {
   display: inline-block;
 }
+
 .settings-set-cookie h3 {
   font-size: smaller;
   margin-block: 4px 0;
 }
+
 .settings-set-cookie form {
   display: flex;
   gap: 4px;
 }
+
 .settings-set-cookie form>* {
-  margin:unset !important;
+  margin: unset !important;
 }
+
 .settings-set-cookie form>input[type="text"] {
   width: 20em;
 }
